Bug 1422201: Only handle remote ids passed to IAccessible::accChild on the root accessible. r=MarcoZ

Previously, we could return remote accessibles which weren't actually descendants of the accessible on which accChild was called.
For example, calling accChild on a local document with the id of a remote document would happily return the remote accessible.
This confused clients such as NVDA which use accChild to check whether something is a descendant of a document.

MozReview-Commit-ID: 8mJ4m6RC3r2